<resources>
    <string name="app_name">DYACO LINK</string>
    <string name="login_activity_wechat">请安装微信客户端</string>
    <string name="login_activity_wechat_success">Authorization successful</string>
    <string name="login_activity_wechat_fail">Authorization failed</string>
    <string name="login_activity_wechat_cancle">Deauthorize</string>
    <string name="register_email"><u>Register by email</u></string>
    <string name="body_activity">"Body Settings"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_message"><u>Log in via SMS</u></string>
    <string name="login_email"><u>Log in via EMAIL</u></string>
    <string name="login_QQ">Log in via QQ ID</string>
    <string name="login_wechat">Log in via QQ ID</string>
    <string name="comeback">Back</string>
    <string name="login_forgetpwd"><u>Forgot password</u></string>
    <string name="login_phone_pwd">6~20 digit password</string>
    <string name="login_phone_pwd1">Password</string>
    <string name="login_phone_phonenumber">Your phone number</string>
    <string name="login_support_country">China</string>
    <string name="login_content_1">使用连爱,即表示您同意连爱的</string>
    <string name="login_content_2"><u>使用条款</u></string>
    <string name="login_content_3"><u>和</u></string>
    <string name="login_content_4"><u>隐私政策</u></string>
    <string name="login_yanzhengma">Enter verification code</string>
    <string name="login_from_email">Your email address</string>
    <string name="login_other"><u>Sign in via other account</u></string>
    <string name="login_erification_code">verification code</string>
    <string name="login_yanzhen_phone">checking...</string>
    <string name="login_error1">PhoneNumber cannot be empty</string>
    <string name="login_error2">Please enter the correct mailbox format</string>
    <string name="login_error3">Password can not be empty</string>
    <string name="login_error4">Passwords and user names do not match</string>
    <string name="login_error5">Network error, please check the network after re login</string>
    <string name="login_error6">Number entered is not correct</string>
    <string name="login_error7">Email cannot be empty</string>
    <string name="login_error8">Account does not exist</string>
    <string name="login_error9">Verification code is the 4 digit</string>
    <string name="login_error10">This number has already been registered.</string>
    <string name="login_error11">Nickname cannot be empty</string>
    <string name="changeinfo">Submitting to server</string>
    <string name="changeinfook">Successful modification</string>
    <string name="portal_main_mustbund">设备已绑定用户,是否确定格式化...</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_form_exit_app_tip">Are you sure to exit?</string>
    <string name="login_form_error_message">Login failed!</string>
    <string name="login_form_error">Error connecting to the server and login,result==null</string>
    <string name="login_form_loading_login">Logging...</string>
    <string name="login_form_version_error">Update version error.</string>
    <string name="login_form_error_psw_tip">Error</string>
    <string name="login_form_error_psw_message">Invalid login information, please check your Email and Password.</string>
    <string name="login_form_relogin_text">Switch User</string>
    <string name="login_form_account">Email</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_register">REGISTER</string>
    <string name="login_form_login">LOGIN</string>
    <string name="login_form_login_quickly">Fast Login</string>
    <string name="login_form_qq_login">QQ Log In</string>
    <string name="login_form_wx_login">微信 登 录</string>
    <string name="login_form_forgot_password">Forgot Password >></string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_email">Mailbox</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="register_form_title">Registeration</string>
    <string name="register_form_view_nickname">Nickname</string>
    <string name="register_form_view_eMail">Email</string>
    <string name="register_form_view_password">Password </string>
    <string name="register_form_view_confirmpsw">Confirm Password </string>
    <string name="register_form_view_height">Height:</string>
    <string name="register_form_view_weight">Weight:</string>
    <string name="register_form_view_age">Age:</string>
    <string name="register_form_view_man">Male</string>
    <string name="register_form_view_woman">Female</string>
    <string name="register_form_view_agreelisence">Accept</string>
    <string name="register_form_view_look_caluse">Read terms >></string>
    <string name="register_form_btn_submit">Register</string>
    <string name="register_form_valid_nick_name">The nickname is necessary! </string>
    <string name="register_form_valid_mail">Email cannot be empty</string>
    <string name="register_form_valid_psw">Password cannot be empty</string>
    <string name="register_form_valid_psw_notenouph">Password should be no less than 6 digit</string>
    <string name="register_form_valid_psw_not_same">Password is inconsistent before and after</string>
    <string name="register_form_valid_agree_role">Please read the terms before register</string>
    <string name="register_form_error_mail_exist">Registeration failed. This email was registered</string>
    <string name="register_form_error_message">Registeration failed. Unknown error！</string>
    <string name="register_form_error_height">Registeration failed. Unknown error！</string>
    <string name="register_form_error_weight">Registeration failed. Unknown error！</string>
    <string name="register_form_error_age">Registeration failed. Unknown error！</string>
    <string name="register_form_mail_have_exist">This email was registered</string>
    <string name="register_form_mail_ok">Email is available</string>
    <string name="register_form_next_step">Next（1/2）</string>
    <string name="register_success_title">Registeration completed! </string>
    <string name="register_success_experience">Come on in</string>
    <string name="register_success_mail">Email:</string>
    <string name="menu_more">More</string>
    <string name="menu_exit">Exit</string>
    <string name="register_continue">Continue</string>
    <string name="queren">OK</string>
    <string name="register_agreelisenc_1">Using Linkloving means you have read and agreed these</string>
    <string name="register_agreelisenc_2">Terms</string>
    <string name="register_agreelisenc_3">and</string>
    <string name="register_agreelisenc_4">Private policy</string>
    <string name="successfully_registered">Successfully Registered！</string>
    <string name="register_avater">Complete your profile</string>
    <string name="register_updata_avater">Upload avatar</string>
    <string name="register_nickname">nickname：</string>
    <string name="register_sex">Your Sex</string>
    <string name="register_height">Your Height</string>
    <string name="register_weight">Your Weight</string>
    <string name="register_birth">Your Birthday</string>
    <string name="smssdk_back">Back </string>
    <string name="smssdk_regist">Register with phone number</string>
    <string name="smssdk_make_sure_country_mobile">Please confirm country and input phone number</string>
    <string name="smssdk_country">Country</string>
    <string name="smssdk_next">Next</string>
    <string name="smssdk_make_sure_mobile_num">Confirm phone number</string>
    <string name="smssdk_cancel">Cancel</string>
    <string name="smssdk_ok">OK</string>
    <string name="smssdk_make_sure_mobile_detail"><Data>We will send &lt;font color=#3cac17>verification code&lt;/font> messages to this number:</Data></string>
    <string name="smssdk_write_mobile_phone">Please input your phone number</string>
    <string name="smssdk_write_right_mobile_phone">Please input the correct phone number</string>
    <string name="smssdk_write_identify_code">Please input verification code</string>
    <string name="smssdk_send_mobile_detail"><Data>We have already sent &lt;font color=#209526>verification code&lt;/font> messages to this number:</Data></string>
    <string name="smssdk_smart_verify_already">Smart Verification already</string>
    <string name="smssdk_smart_verify_tips">Credit phone number, no SMS verification:</string>
    <string name="smssdk_unreceive_identify_code"><Data>&lt;font color=#a8b8cb>Not receiving the verification code?&lt;/font></Data></string>
    <string name="smssdk_submit">Submit</string>
    <string name="smssdk_identify_code">Verification code</string>
    <string name="smssdk_receive_msg"><Data>Receive SMS takes about &lt;font color=#209526>%s&lt;/font> seconds</Data></string>
    <string name="smssdk_resend_identify_code">Resend verification code</string>
    <string name="smssdk_choose_country">Choose country</string>
    <string name="smssdk_network_error">Network error, please try later</string>
    <string name="smssdk_country_not_support_currently">Country not support, please choose other</string>
    <string name="smssdk_search">Search</string>
    <string name="smssdk_search_contact">Search contact</string>
    <string name="smssdk_virificaition_code_sent">Verification code has been sent</string>
    <string name="smssdk_virificaition_code_wrong">Verification code error</string>
    <string name="smssdk_your_ccount_is_verified">Validation successful</string>
    <string name="smssdk_user_info_submited">User info has been submitted </string>
    <string name="smssdk_contacts_in_app">Contacts in App</string>
    <string name="smssdk_contacts_out_app">Contacts out of App</string>
    <string name="smssdk_invite">Invite</string>
    <string name="smssdk_send_invitation">Send invitation</string>
    <string name="smssdk_not_invite"><Data>&lt;font color=#209526> %s &lt;/font></Data>Uninvited</string>
    <string name="smssdk_contacts_detail">User Detail</string>
    <string name="smssdk_contacts_phones">Phone: </string>
    <string name="user_info_take_photo">Take Picture</string>
    <string name="user_info_delete_photo">Delete Photo</string>
    <string name="user_info_choose_photo">Select from album</string>
    <string name="back">Back</string>
    <string name="unit_km">Km</string>
    <string name="member_login">Member Login</string>
    <string name="Account">Account number(Email)</string>
    <string name="YourEmailAddress">Your email address</string>
    <string name="password">Password</string>
    <string name="enter8to10">Enter 8 to 10 characters</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="Birthday">Birthday</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="yyyy">yyyy</string>
    <string name="mm">mm</string>
    <string name="dd">dd</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="Goalsetting">Goal settings</string>
    <string name="unitsetting">Unit settings</string>
    <string name="themetric">The Metric System</string>
    <string name="thebritshunit">The Britsh Unit</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="steps">steps</string>
    <string name="Calories">Calories</string>
    <string name="kcal">kcal</string>
    <string name="Distance">Distance</string>
    <string name="Attention">Attention!</string>
    <string name="Gps">GPS</string>
    <string name="must_be">GPS must be turned on</string>
    <string name="ok">ok</string>
    <string name="start_">start!</string>
    <string name="doyouwantto">Do you want to log out?</string>
    <string name="start_trace">Start</string>
    <string name="stop_trace">Stop</string>
</resources>