<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/unbackground"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@mipmap/tw_dia"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_login"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            />
        <TextView
            android:textColor="@color/loginblue"
            android:textSize="18sp"
            android:layout_marginLeft="-14dp"
            android:layout_marginTop="20dp"
            android:text="@string/Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginTop="12dp"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:background="@mipmap/input"
            android:textColorHint="#C9CACB"
            android:hint="@string/YourEmailAddress"
            />
        <TextView
            android:textColor="@color/loginblue"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="-70dp"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginTop="12dp"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:background="@mipmap/input"
            android:textColorHint="#C9CACB"
            android:maxLength="10"
            android:hint="@string/enter8to10"
            />

        <TextView
            android:textColor="@color/loginblue"
            android:id="@+id/forgetPassword"
            android:layout_marginLeft="50dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ForgetPassword"
            />
        <ImageView
            android:layout_marginLeft="50dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/forgetpassword"
            />
    </LinearLayout>

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/signin"
        />
</LinearLayout>