<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:background="@color/yellow"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/Sign_Out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_weight="0.16" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/gray_for_background"
        android:weightSum="1">

        <TextView
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:text="@string/doyouwantto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="0.64" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="100dp">
        <Button
            android:textAllCaps="false"
            android:text="@string/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            <Button
                android:layout_marginLeft="80dp"
                android:textAllCaps="false"
                android:text="@string/Confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>