<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:id="@+id/uploadRelative"
    >
  <LinearLayout
      android:id="@+id/first_middle"
      android:visibility="gone"
      android:layout_centerVertical="true"
      android:layout_width="match_parent"
      android:layout_height="180dp"
      android:background="@color/blueBackground"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      >
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
        android:textColor="@color/white"
      android:text="@string/Attention"
      android:layout_marginTop="15dp"
      />
  <ImageView
      android:layout_width="280dp"
      android:layout_height="1dp"
      android:src="@mipmap/line"
      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gps"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/must_be"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        />
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:background="@drawable/button"
        android:text="@string/ok"
        android:id="@+id/OK_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        />

  </LinearLayout>
  <LinearLayout
      android:visibility="gone"
      android:layout_centerVertical="true"
      android:layout_width="match_parent"
      android:layout_height="180dp"
      android:background="@color/blueBackground"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:id="@+id/second_middle"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_"
        android:textColor="@color/yellow"
        android:textSize="26sp"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:src="@mipmap/line"
        android:layout_marginTop="4dp"
        />
    <Chronometer
        android:id="@+id/chronometer"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:text="00:00:00"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

  </LinearLayout>


    <Button
        android:id="@+id/btn_startTrace"
        android:background="@drawable/button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dip"
        android:textAllCaps="false"
        android:text="@string/start_trace"
        android:textSize="25sp"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_stopTrace"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:background="@drawable/button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:text="@string/stop_trace"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="#000000" />

<!--    <Button
        android:id="@+id/btn_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_stopTrace"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF"
        android:text="@string/fence_operator"
        android:textColor="#000000" />-->

</RelativeLayout>